# ArcadisProcureMI

./: README.md  advanced_market_context.py  api_test.py  app.py  app_redesigned.py  comprehensive_market_intelligence_story.py  credible_sources.py  enhanced_market_intelligence.py  geopolitical_impact_visualizer.py  integrated_market_intelligence.py  intelligence_wireframes.md  market_intelligence.py  market_intelligence_alerts.py  market_intelligence_command_center.py  market_intelligence_engine.py  market_intelligence_integration_package.py  market_intelligence_story.py  market_intelligence_tab.py  market_intelligence_visual.py  market_research.db  narrative_market_intelligence.py  pyproject.toml  simple_narrative_intelligence.py  visual_intelligence_dashboard.py  wireframes_clean.py
attached_assets/: Pasted--Market-Intelligence-Integration-Package-Drop-this-into-yo-1748447910276.txt  Pasted--Procurement-Process-Analytics-Platform-Blueprint-Application-Structure-using-Python-Streamlit-1748349861536.txt  Pasted-A-5-question-answer-narrative-that-builds-market-intelligence-through-real-web-crawling-and-AI-analy-1748465080963.txt  Pasted-Alright-this-is-a-much-clearer-scope-for-a-single-tab-solution-making-it-highly-focused-and-impact-1748767160413.txt  Pasted-Extend-an-existing-Streamlit-web-application-built-with-Python-and-Streamlit-by-adding-a-new-tab-c-1748614750406.txt  Pasted-Prompt-Engineering-for-OpenAI-API-The-Intelligence-Elegance-Driver-The-prompt-is-everything-her-1748767625532.txt  dashboard.py  data_manager.py  database_service.py  openai_service.py  (+11 more)
(+19 files in other folders)
